# Aero

./: README.md
aero/: .gitignore  Makefile
aero/examples/demo/: go.mod  main.go
aero/examples/demo/assets/: app.js  index.html  style.css
aero/scripts/: packager.go
aero/sdk/go/: aero.go  app.go  app_test.go  assets.go  assets_test.go  go.mod  ipc.go  ipc_test.go  pact_linux.go  pact_unix.go  pact_unix_other.go  pact_windows.go  schema.go  supervisor.go  supervisor_test.go
aero/shell/: Cargo.toml
aero/shell/src/: integrations.rs  ipc.rs  main.rs
aero/shell/src/platform/: linux.rs  macos.rs  mod.rs  stub.rs  windows.rs
