[package]
name = "aero-shell"
version = "0.1.0"
edition = "2021"
description = "Aero native webview shell — direct OS bindings, zero abstract window crates"
license = "MIT"

[[bin]]
name = "aero-shell"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
crossbeam-channel = "0.5"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18", features = ["v3_24"] }
glib = "0.18"
gio = "0.18"
gio-sys = "0.18"
glib-sys = "0.18"
gtk-sys = "0.18"
webkit2gtk-sys = "2.0"
libappindicator = "0.9"
dbus = "0.9"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = "0.26"

[target.'cfg(windows)'.dependencies]
webview2-com = "0.33"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Data_Xml_Dom",
    "UI_Notifications",
] }
